--- a/PROJETO 1 - Shark_Attacks.ipynb
+++ b/PROJETO 1 - Shark_Attacks.ipynb
@@ -8153,7 +8153,9 @@
     "pip install wikipedia\n",
     "import wikipedia\n",
     "from urllib.request import urlopen\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "### Material filtered on NOTEPAD and loaded on this CSV file"
    ]
   },
   {
