--- a/PROJETO 1 - Shark_Attacks.ipynb
+++ b/PROJETO 1 - Shark_Attacks.ipynb
@@ -1354,7 +1354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PACIFIC AND ATLANTIC LISTS\n",
+    "# PACIFIC_&_ATLANTIC LISTS\n",
     "We used UN definition of Pacific and Atlantic countries through organized institution between nations "
    ]
   },
