--- a/PROJETO 2 PARTE 1 - Pipeline_api_secretaria_fazenda_sp_public_version.ipynb
+++ b/PROJETO 2 PARTE 1 - Pipeline_api_secretaria_fazenda_sp_public_version.ipynb
@@ -1343,7 +1343,8 @@
     "heading_collapsed": true
    },
    "source": [
-    "# EXCEL_FILE"
+    "# EXCEL_FILE\n",
+    "- Dont't run it; just if you want to compare with public data shared in excel format; "
    ]
   },
   {
